--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,9 @@
                 <li class="nav-item">
                   <a class="nav-link text-white" href="#contact">Contact</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link text-white" href="new">NewPost</a>
+                </li>
               </ul>
             </div>
           </nav>
