--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
                   <a class="nav-link text-white" href="#contact">Contact</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-white" href="new">NewPost</a>
+                  <a class="nav-link text-white" href="events/new">NewPost</a>
                 </li>
               </ul>
             </div>
