--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -11,185 +11,27 @@
             <% end %>
             <div class="container">
             <h2 class= "py-4 text-dark">イベント一覧</h2>
-            <div class="row row-cols-1 row-cols-md-3">
-              <div class="col mb-4">
-                <div class="card mb-4 shadow-sm">
-                  <img src="img/card.jpg" class="card-img-top px-3 mb-3" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">FIELD OF MUSIC Vol.11</h5>
-                    <p class="card-text">SampleSampleSampleSampleSampleSampleSampleSampleSampleSample</p>
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-sm btn-outline-secondary">詳細</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">編集</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">削除</button>
+              <div class="row row-cols-1 row-cols-md-3"">
+                <% @events.each do |event| %>
+                  <div class="col mb-4">
+                    <div class="card mb-4 shadow-sm" width="20rem;">
+                      <img src="img/card.jpg" class="card-img-top px-3 mb-3" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title"><%= event.title %></h5>
+                        <p class="card-text"><%= event.content %></p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-sm btn-outline-secondary">詳細</button>
+                                <button type="button" class="btn btn-sm btn-outline-secondary">編集</button>
+                                <button type="button" class="btn btn-sm btn-outline-secondary">削除</button>
+                            </div>
+                            <small class="text-muted"><%= event.created_at %></small>
                         </div>
-                        <small class="text-muted">9 mins</small>
+                      </div>
                     </div>
                   </div>
-                </div>
+                <% end %>
               </div>
-              <div class="col mb-4">
-                <div class="card mb-4 shadow-sm">
-                  <img src="img/card.jpg" class="card-img-top px-3 mb-3" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">FIELD OF MUSIC Vol.11</h5>
-                    <p class="card-text">SampleSampleSampleSampleSampleSampleSampleSampleSampleSample</p>
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-sm btn-outline-secondary">詳細</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">編集</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">削除</button>
-                        </div>
-                        <small class="text-muted">9 mins</small>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col mb-4">
-                <div class="card mb-4 shadow-sm">
-                  <img src="img/card.jpg" class="card-img-top px-3 mb-3" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">FIELD OF MUSIC Vol.11</h5>
-                    <p class="card-text">SampleSampleSampleSampleSampleSampleSampleSampleSampleSample</p>
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-sm btn-outline-secondary">詳細</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">編集</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">削除</button>
-                        </div>
-                        <small class="text-muted">9 mins</small>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col mb-4">
-                <div class="card mb-4 shadow-sm">
-                  <img src="img/card.jpg" class="card-img-top px-3 mb-3" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">FIELD OF MUSIC Vol.11</h5>
-                    <p class="card-text">SampleSampleSampleSampleSampleSampleSampleSampleSampleSample</p>
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-sm btn-outline-secondary">詳細</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">編集</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">削除</button>
-                        </div>
-                        <small class="text-muted">9 mins</small>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col mb-4">
-                <div class="card mb-4 shadow-sm">
-                  <img src="img/card.jpg" class="card-img-top px-3 mb-3" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">FIELD OF MUSIC Vol.11</h5>
-                    <p class="card-text">SampleSampleSampleSampleSampleSampleSampleSampleSampleSample</p>
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-sm btn-outline-secondary">詳細</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">編集</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">削除</button>
-                        </div>
-                        <small class="text-muted">9 mins</small>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            </div>
-        </div>
-        <div class="my-3 bg-white">
-            <div class="container">
-            <h2 class= "py-4 text-dark">ニュース一覧</h2>
-            <div class="row row-cols-1 row-cols-md-3">
-              <div class="col mb-4">
-                <div class="card mb-4 shadow-sm">
-                  <img src="img/card.jpg" class="card-img-top px-3 mb-3" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">FIELD OF MUSIC Vol.11</h5>
-                    <p class="card-text">SampleSampleSampleSampleSampleSampleSampleSampleSampleSample</p>
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-sm btn-outline-secondary">詳細</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">編集</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">削除</button>
-                        </div>
-                        <small class="text-muted">9 mins</small>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col mb-4">
-                <div class="card mb-4 shadow-sm">
-                  <img src="img/card.jpg" class="card-img-top px-3 mb-3" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">FIELD OF MUSIC Vol.11</h5>
-                    <p class="card-text">SampleSampleSampleSampleSampleSampleSampleSampleSampleSample</p>
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-sm btn-outline-secondary">詳細</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">編集</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">削除</button>
-                        </div>
-                        <small class="text-muted">9 mins</small>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col mb-4">
-                <div class="card mb-4 shadow-sm">
-                  <img src="img/card.jpg" class="card-img-top px-3 mb-3" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">FIELD OF MUSIC Vol.11</h5>
-                    <p class="card-text">SampleSampleSampleSampleSampleSampleSampleSampleSampleSample</p>
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-sm btn-outline-secondary">詳細</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">編集</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">削除</button>
-                        </div>
-                        <small class="text-muted">9 mins</small>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col mb-4">
-                <div class="card mb-4 shadow-sm">
-                  <img src="img/card.jpg" class="card-img-top px-3 mb-3" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">FIELD OF MUSIC Vol.11</h5>
-                    <p class="card-text">SampleSampleSampleSampleSampleSampleSampleSampleSampleSample</p>
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-sm btn-outline-secondary">詳細</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">編集</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">削除</button>
-                        </div>
-                        <small class="text-muted">9 mins</small>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col mb-4">
-                <div class="card mb-4 shadow-sm">
-                  <img src="img/card.jpg" class="card-img-top px-3 mb-3" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">FIELD OF MUSIC Vol.11</h5>
-                    <p class="card-text">SampleSampleSampleSampleSampleSampleSampleSampleSampleSample</p>
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-sm btn-outline-secondary">詳細</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">編集</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">削除</button>
-                        </div>
-                        <small class="text-muted">9 mins</small>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
             </div>
         </div>
     </main>
