クラス名変更

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -11,7 +11,7 @@
             <% end %>
             <div class="container">
             <h2 class= "py-4 text-dark">イベント一覧</h2>
-              <div class="row row-cols-1 row-cols-md-3"">
+              <div class="row row-cols-1 row-cols-md-3">
                 <% @events.each do |event| %>
                   <div class="col mb-4">
                     <div class="card mb-4 shadow-sm" width="20rem;">
