--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -21,9 +21,9 @@
                         <p class="card-text"><%= event.content %></p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                              <%= link_to '詳細', event, class="btn btn-sm btn-outline-secondary" %>
-                              <%= link_to '編集', edit_event_path(event), class="btn btn-sm btn-outline-secondary" %>
-                              <%= button_to '削除', event, class="btn btn-sm btn-outline-secondary", method: :delete %>
+                              <%= link_to '詳細', event, class: "btn btn-sm btn-outline-secondary" %>
+                              <%= link_to '編集', edit_event_path(event), class: "btn btn-sm btn-outline-secondary" %>
+                              <%= button_to '削除', event, class: "btn btn-sm btn-outline-secondary", method: :delete %>
                             </div>
                             <small class="text-muted"><%= event.created_at %></small>
                         </div>
