--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,17 +19,21 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
-                <li class="nav-item active">
-                  <a class="nav-link text-white" href="#home">Home <span class="sr-only">(current)</span></a>
-                </li>
+                <%# both %>
                 <li class="nav-item">
-                  <a class="nav-link text-white" href="#skill">Mypage</a>
+                  <a class="nav-link text-white" href="#">マイページ</a>
                 </li>
+                <%# user %>
                 <li class="nav-item">
-                  <a class="nav-link text-white" href="#contact">Contact</a>
+                  <a class="nav-link text-white" href="#">申し込み一覧</a>
                 </li>
+                <%# admin only %>
                 <li class="nav-item">
-                  <a class="nav-link text-white" href="events/new">NewPost</a>
+                  <a class="nav-link text-white" href="events/new">新規投稿</a>
+                </li>
+                <%# user %>
+                <li class="nav-item">
+                  <%= button_to 'ログアウト', destroy_user_session_path,class: 'nav-link text-white', method: :delete %>
                 </li>
               </ul>
             </div>
