イベント管理画面

--- a/app/views/admin/events/index.html.erb
+++ b/app/views/admin/events/index.html.erb
@@ -1,7 +1,7 @@
 <div class="d-flex align-items-center">
   <h1>イベント管理画面</h1>
   <div class="ml-auto boards__linkBox">
-    <a href="/boards/new" class="btn btn-outline-dark">新規作成</a>
+    <a href="/events/new" class="btn btn-outline-dark">新規作成</a>
   </div>
 </div>
 
@@ -14,7 +14,6 @@
       <th>作成日時</th>
       <th>更新日時</th>
       <th></th>
-      <th></th>
     </tr>
   </thead>
   <tbody>
@@ -24,8 +23,7 @@
         <td></td>
         <td></td>
         <td></td>
-        <td></td>
-        <td></td>
+        <td>詳細</td>
     </tr>
   </tbody>
 </table>
