TODOコメント追記

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
                 <li class="nav-item">
                   <a class="nav-link text-white" href="#">マイページ</a>
                 </li>
+                  <%# TODO：_header.html.erb作成 %>
                   <li class="nav-item">
                     <a class="nav-link text-white" href="events/new">新規投稿</a>
                   </li>
