mypageに@userがわたることを確認

--- a/app/views/users/me.html.erb
+++ b/app/views/users/me.html.erb
@@ -1,1 +1,13 @@
 <h2>User@me</h2>
+<div class="contents mypage_contents">
+<div class="mypage_contents_sidebar">
+image
+名前
+メールアドレス：<%= @user.email %>
+プロフィール編集
+パスワード編集
+予約一覧
+</div>
+<div class="mypage_contents_main">
+</div>
+</div>
