--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,30 @@
-<h2>User@index</h2>
+<div class="d-flex align-items-center">
+  <h2>メンバー一覧</h2>
+</div>
+
+<table class="table table-hover users__table">
+  <thead class="thead-dark">
+    <tr>
+      <th>ID</th>
+      <th>名前</th>
+      <th>作成日時</th>
+      <th>更新日時</th>
+      <th></th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @users.each do |user| %>
+      <tr>
+        <td><%= user.id %></td>
+        <td><%= user.name %></td>
+        <td><%= user.created_at %></td>
+        <td><%= user.updated_at %></td>
+        <td><%= link_to '詳細', user, class: 'btn btn-outline-dark' %></td>
+        <td><%= link_to '削除', user, class: 'btn btn-outline-dark', method: :delete %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<%= paginate @users %>
