マイページ修正

--- a/app/views/users/me.html.erb
+++ b/app/views/users/me.html.erb
@@ -1,13 +1,14 @@
-<h2>User@me</h2>
+<h2>マイページ</h2>
 <div class="contents mypage_contents">
 <div class="mypage_contents_sidebar">
+予約一覧
+プロフィール編集
+パスワード編集
+ログアウト
+</div>
+<div class="mypage_contents_main">
 image
 名前
 メールアドレス：<%= @user.email %>
-プロフィール編集
-パスワード編集
-予約一覧
-</div>
-<div class="mypage_contents_main">
 </div>
 </div>
