マイページレイアウト修正

--- a/app/views/users/me.html.erb
+++ b/app/views/users/me.html.erb
@@ -1,14 +1,16 @@
 <h2>マイページ</h2>
-<div class="contents mypage_contents">
-<div class="mypage_contents_sidebar">
-予約一覧
-プロフィール編集
-パスワード編集
-ログアウト
-</div>
-<div class="mypage_contents_main">
-image
-名前
-メールアドレス：<%= @user.email %>
-</div>
+<div class="contents mypage_contents d-flex">
+    <div class="mypage_contents_sidebar">
+        <ul class="mypage_sidebar_lists text-center">
+            <li class="mypage_sidebar_list">予約一覧</li>
+            <li class="mypage_sidebar_list">プロフィール編集</li>
+            <li class="mypage_sidebar_list">パスワード編集</li>
+            <li class="mypage_sidebar_list">ログアウト</li>
+        </ul>
+    </div>
+    <div class="mypage_contents_main">
+    image
+    名前
+    メールアドレス：<%= @user.email %>
+    </div>
 </div>
