--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,34 +11,9 @@
   </head>
 
   <body>
-      <header>
-        <nav class="navbar navbar-expand-lg navbar-light text-dark bg-dark navbar-fixed-top" id="home">
-            <a class="navbar-brand text-white mss-lg-5" href="#">Field of Music</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link text-white" href="#">マイページ</a>
-                </li>
-                  <%# TODO：_header.html.erb作成 %>
-                  <li class="nav-item">
-                    <a class="nav-link text-white" href="events/new">新規投稿</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link text-white" href="events/new">ユーザー管理</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link text-white" href="#">申し込み一覧</a>
-                  </li>
-                <li class="nav-item">
-                  <%= button_to 'ログアウト', destroy_user_session_path,class: 'nav-link text-white', method: :delete %>
-                </li>
-              </ul>
-            </div>
-          </nav>
-    </header>
-      <%= yield %>
+    <% if current_user%>
+      <%= render 'header' %>
+    <% end %>
+    <%= yield %>
   </body>
 </html>
