--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -1,22 +1,24 @@
       <header>
         <nav class="navbar navbar-expand-lg navbar-light text-dark bg-dark navbar-fixed-top" id="home">
-            <a class="navbar-brand text-white mss-lg-5" href="#">Field of Music</a>
+            <%= link_to "Field of Music", events_path, class: "navbar-brand text-white mss-lg-5"  %>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link text-white" href="#">マイページ</a>
+                    <%= link_to "マイページ", mypage_path, class: "nav-link text-white"  %>
                 </li>
                   <li class="nav-item">
-                    <a class="nav-link text-white" href="events/new">新規投稿</a>
+                    <%= link_to "新規投稿", new_event_path, class: "nav-link text-white"  %>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-white" href="events/new">ユーザー管理</a>
+                    <%# TODO：ユーザー管理ページ作成後、リンク先入れ替え %>
+                    <%= link_to "ユーザー管理", new_event_path, class: "nav-link text-white"  %>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link text-white" href="#">申し込み一覧</a>
+                  <%# TODO：申込履歴ページ作成後、リンク先入れ替え %>
+                    <%= link_to "申込履歴", new_event_path, class: "nav-link text-white"  %>
                   </li>
                 <li class="nav-item">
                   <%= button_to 'ログアウト', destroy_user_session_path,class: 'nav-link text-white', method: :delete %>
