--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -31,6 +31,18 @@
     <%= f.password_field :current_password, autocomplete: "current-password" %>
   </div>
 
+  <div class="field">
+    <span>Part</span>
+    <%= f.collection_check_boxes(:part_ids, Part.all, :id, :name) do |part| %>
+      <div class="form-check">
+        <%= part.label class: 'form-check-label' do %>
+          <%= part.check_box class: 'form-check-input' %>
+          <%= part.text %>
+        <% end %>
+      </div>
+    <% end %>
+  </div>
+
   <div class="actions">
     <%= f.submit "Update" %>
   </div>
