--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -5,35 +5,5 @@
             <a class="'btn btn-outline-dark'" href="../">一覧</a>
         </div>
     </div>
-    <%= form_for @event do |f| %>
-        <div class="form-group">
-            <%= f.label :title, 'イベントタイトル' %>
-            <%= f.text_field :title, class: 'form-control' %>
-        </div>
-        <div class="form-group">
-            <%= f.label :content, '内容' %>
-            <%= f.text_area :content, class: 'form-control', rows: 10 %>
-        </div>
-
-        <div class="form-group">
-            <%= f.label :event_date, '開催日' %>
-            <%= f.date_select :event_date, class: 'form-control' %>
-        </div>
-
-        <div class="form-group">
-            <%= f.label :event_start_time, '開始時刻' %>
-            <%= f.time_select :event_start_time, class: 'form-control' %>
-        </div>
-
-        <div class="form-group">
-            <%= f.label :event_end_time, '終了時刻' %>
-            <%= f.time_select :event_end_time, class: 'form-control' %>
-        </div>
-
-        <div class="form-group">
-            <%= f.label :place, '開催場所' %>
-            <%= f.text_field :place, class: 'form-control' %>
-        </div>
-        <%= f.submit '保存', class: 'btn btn-primary' %>
-    <% end %>
+    <%= render partial: 'form', locals: { event: @event } %>
 </div>
