レイアウト微調整

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,5 +1,5 @@
     <main role="main">
-        <section class="jumbotron text-center py-5">
+        <section class="jumbotron text-center">
             <div class="container">
                 <h1 class="jumbotron-heading">Field of Music</h1>
                 <p class="lead text-muted">“大好き”を詰め込んだ音楽コミュニティ。</p>
