--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,6 +7,7 @@
     <tr>
       <th>ID</th>
       <th>名前</th>
+      <th>メールアドレス</th>
       <th>作成日時</th>
       <th>更新日時</th>
       <th></th>
@@ -18,6 +19,7 @@
       <tr>
         <td><%= user.id %></td>
         <td>name</td>
+        <td><%= user.email %></td>
         <td><%= user.created_at %></td>
         <td><%= user.updated_at %></td>
         <td><%= link_to '詳細', user, class: 'btn btn-outline-dark' %></td>
