--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -1,7 +1,7 @@
 <div class="flash_message text-center">
     <% if flash[:notice] %>
-        <p class="alert alert-success text_center"><%= flash[:notice] %></p>
+        <p class="alert alert-success text_center"><%= notice %></p>
     <% elsif flash[:alert] %>
-        <p class="alert alert-danger text_center"><%= flash[:danger] %></p>
+        <p class="alert alert-danger text_center"><%= alert %></p>
     <% end %>
 </div>
