--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -27,5 +27,11 @@
             <%= f.label :place, '開催場所' %>
             <%= f.text_field :place, class: 'form-control' %>
         </div>
+
+        <div class="form-group">
+             <%= f.label :画像 %><br />
+             <%= f.file_field :image, class: "image" %>
+              <p><%= f.check_box :remove_image %>画像を削除する</p>
+        </div>
         <%= f.submit '保存', class: 'btn btn-primary' %>
     <% end %>
