--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -18,8 +18,7 @@
                   </li>
                 <% end %>
                   <li class="nav-item">
-                  <%# TODO：申込履歴ページ作成後、リンク先入れ替え %>
-                    <%= link_to "申込履歴", new_event_path, class: "nav-link text-white"  %>
+                    <%= link_to "予約一覧", reservations_path, class: "nav-link text-white"  %>
                   </li>
                 <li class="nav-item">
                   <%= button_to 'ログアウト', destroy_user_session_path,class: 'nav-link text-white', method: :delete %>
