font-awesome削除（エラー）

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,4 +17,5 @@
 @import "mypage";
 @import "layout";
 @import "reservations";
-@import "font-awesome";
+// TODO：↓エラー解消
+// @import "font-awesome";
