--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -43,6 +43,16 @@
     <% end %>
   </div>
 
+  <div class="field">
+    <%= f.label :name %><br />
+    <%= f.text_field :name, autocomplete: "ニックネーム" %>
+  </div>
+
+    <div class="field">
+    <%= f.label :profile %><br />
+    <%= f.text_area :profile, autocomplete: "プロフィール文" %>
+  </div>
+
   <div class="actions">
     <%= f.submit "Update" %>
   </div>
