--- a/app/views/users/me.html.erb
+++ b/app/views/users/me.html.erb
@@ -9,8 +9,8 @@
         </div>
         <ul class="mypage_menu d-flex justify-content-between">
             <li class="mypage_sidebar_list"><%= link_to '予約一覧', reservations_path %></li>
-            <li class="mypage_sidebar_list">プロフィール編集</li>
-            <li class="mypage_sidebar_list">パスワード編集</li>
+            <li class="mypage_sidebar_list"><%= link_to 'プロフィール編集', mypage_profile_edit_path %></li>
+            <li class="mypage_sidebar_list"><%= link_to 'パスワード編集', edit_user_registration_path %></li>
             <li class="mypage_sidebar_list"><%= button_to 'ログアウト', destroy_user_session_path, method: :delete %></li>
         </ul>
         </div>
