不具合修正

--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container mt-10">
     <div class="d-flex align-items-center">
-        <h1>イベント作成</h1>
+        <h2 class="py-4">イベント作成</h2>
         <div class="ml-auto boards__linkBox">
             <a class="'btn btn-outline-dark'" href="../">一覧</a>
         </div>
