--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,30 +1,29 @@
-<div class="d-flex align-items-center">
-  <h2>メンバー一覧</h2>
-</div>
-
-<table class="table table-hover users__table">
-  <thead class="thead-dark">
-    <tr>
-      <th>ID</th>
-      <th>名前</th>
-      <th>メールアドレス</th>
-      <th>作成日時</th>
-      <th>更新日時</th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @users.each do |user| %>
+<div class="container">
+  <h2 class="py-4">メンバー一覧</h2>
+  <table class="table table-hover users__table">
+    <thead class="thead-dark">
       <tr>
-        <td><%= user.id %></td>
-        <td>name</td>
-        <td><%= user.email %></td>
-        <td><%= user.created_at %></td>
-        <td><%= user.updated_at %></td>
-        <td><%= link_to '詳細', user, class: 'btn btn-outline-dark' %></td>
-        <td><%= link_to '削除', user, class: 'btn btn-outline-dark', method: :delete %></td>
+        <th>ID</th>
+        <th>名前</th>
+        <th>メールアドレス</th>
+        <th>担当パート</th>
+        <th>作成日時</th>
+        <th></th>
+        <th></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+    <tbody>
+      <% @users.each do |user| %>
+        <tr>
+          <td><%= user.id %></td>
+          <td><%= user.name %></td>
+          <td><%= user.email %></td>
+          <td>ドラム</td>
+          <td><%= user.created_at.to_s(:datetime_jp) %></td>
+          <td><%= link_to '詳細', user, class: 'btn btn-outline-dark' %></td>
+          <td><%= link_to '削除', user, class: 'btn btn-outline-dark', method: :delete %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
