レイアウト日修正

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -6,7 +6,7 @@
     </div>
   </section>
 
-  <div class="my-3 bg-light">
+  <div class="bg-light">
     <div class="container">
       <h2 class= "py-4 text-dark">イベント一覧</h2>
       <div class="row">
