--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-    <h2>プロフィール編集</h2>
+    <h2 class="py-4">プロフィール編集</h2>
     <%= form_for @user do |f| %>
         <div class="field">
         <span>担当パート</span>
