--- a/app/views/users/me.html.erb
+++ b/app/views/users/me.html.erb
@@ -4,14 +4,18 @@
         <div class="mypage_top text-center">
             <div class="mypage_top-image"><%= image_tag "user_default.jpg", class:"", alt:"default_image" %></div>
             <div class="mypage_top-name"><%= @user.email%></div>
-            <div class="mypage_top-parts"><%= @user.email%></div>
-            <div class="mypage_top-profile"><%= @user.email%></div>
+            <div class="mypage_top-parts">
+            <% @user.parts.each do |part| %>
+                <span class="part-item"><%= part.name %></span>
+            <% end %>
+            </div>
+            <div class="mypage_top-profile"><%= @user.profile%></div>
         </div>
         <ul class="mypage_menu d-flex justify-content-between">
-            <li class="mypage_sidebar_list"><%= link_to '予約一覧', reservations_path %></li>
-            <li class="mypage_sidebar_list"><%= link_to 'プロフィール編集', mypage_profile_edit_path %></li>
-            <li class="mypage_sidebar_list"><%= link_to 'パスワード編集', edit_user_registration_path %></li>
-            <li class="mypage_sidebar_list"><%= button_to 'ログアウト', destroy_user_session_path, method: :delete %></li>
+            <li class="mypage_menu_list"><%= link_to '予約一覧', reservations_path, class:"mypage_menu_list-link" %></li>
+            <li class="mypage_menu_list"><%= link_to 'プロフィール編集', mypage_profile_edit_path, class:"mypage_menu_list-link" %></li>
+            <li class="mypage_menu_list"><%= link_to 'パスワード編集', edit_user_registration_path, class:"mypage_menu_list-link" %></li>
+            <li class="mypage_menu_list"><%= button_to 'ログアウト', destroy_user_session_path, class:"mypage_menu_list-link", method: :delete %></li>
         </ul>
         </div>
     </div>
