レイアウト調整

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2 class="py-4">メンバー一覧</h2>
+  <h2>メンバー一覧</h2>
   <table class="table table-hover users__table">
     <thead class="thead-dark">
       <tr>
