--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -14,7 +14,7 @@
                     <%= link_to "新規投稿", new_event_path, class: "nav-link text-white"  %>
                   </li>
                   <li class="nav-item">
-                    <%= link_to "ユーザー一覧", users_path, class: "nav-link text-white"  %>
+                    <%= link_to "メンバー一覧", users_path, class: "nav-link text-white"  %>
                   </li>
                 <% end %>
                   <li class="nav-item">
