--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="container mt-10">
+<div class="container">
     <div class="d-flex align-items-center">
         <h1>イベント編集</h1>
         <div class="ml-auto boards__linkBox">
