レイアウト調整

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -12,12 +12,13 @@
           <div class="col-lg-4">
             <div class="card mb-4 shadow-sm" width="20rem;">
               <% if event.image.file %>
-                <%= image_tag event.image.url, class:"card-img-top px-3 mb-3 mt-3", alt:"event_image" %>
+                <%= image_tag event.image.url, class:"card-img-top", alt:"event_image" %>
               <% else %>
-                <%= image_tag "event_default.jpg", class:"card-img-top px-3 mb-3 mt-3", alt:"default_image" %>
+                <%= image_tag "event_default.jpg", class:"card-img-top", alt:"default_image" %>
               <% end %>
               <div class="card-body">
                 <h3 class="card-title"><%= event.title %></h3>
+                <p><%= event.event_date %><%= event.event_start_time %>〜<%= event.event_end_time %>@<%= event.place %></p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group mt-3">
                     <%= link_to '詳細', event, class: "btn btn-sm btn-outline-secondary" %>
