--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="d-flex mt-4 mb-4">
     <div class="ml-auto events__linkBox">
-        <%= link_to '一覧', events_path, class: 'btn btn-outline-dark' %>
+        <%= link_to '一覧へ戻る', events_path, class: 'btn btn-outline-dark' %>
         <% if current_user.admin %>
           <%= link_to '編集', edit_event_path(@event), class: 'btn btn-outline-dark' %>
         <% end %>
@@ -11,7 +11,9 @@
       <h4><%= @event.title %></h4>
     </div>
     <div class="card-body">
-      <p class="card-text"><%= simple_format(@event.content) %></p>
+      <p class="card-text">
+      <p class="contents-title">イベント概要</p>
+      <p class="contents-text"><%= simple_format(@event.content) %></p>
     </div>
 
     <%= form_for @reservation do |f| %>
