--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -17,4 +17,13 @@
         margin-top: 1rem;
         padding: 0 1rem;
     }
+
+    .card-title{
+        font-weight: bold;
+        font-size: 18px;
+    }
+}
+
+.events__link-box{
+    margin-bottom: 15px;
 }
