--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -17,7 +17,7 @@
                 <%= image_tag "event_default.jpg", class:"card-img-top", alt:"default_image" %>
               <% end %>
               <div class="card-body">
-                <h3 class="card-title"><%= event.title %></h3>
+                <p class="card-title"><%= event.title %></p>
                 <p><%= event.event_date %><%= event.event_start_time %>〜<%= event.event_end_time %>@<%= event.place %></p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group mt-3">
