--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container mt-10">
+<div class="container">
     <div class="d-flex align-items-center">
         <h2>イベント作成</h2>
         <div class="ml-auto boards__linkBox">
