--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
-  <div class="d-flex mt-4 mb-4">
-    <div class="ml-auto events__linkBox">
+  <div class="d-flex">
+    <div class="ml-auto events__link-box">
         <%= link_to '一覧へ戻る', events_path, class: 'btn btn-outline-dark' %>
         <% if current_user.admin %>
           <%= link_to '編集', edit_event_path(@event), class: 'btn btn-outline-dark' %>
