--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -9,18 +9,18 @@
         </div>
 
         <div class="form-group">
-            <%= f.label :event_date, '開催日' %>
-            <%= f.date_select :event_date, class: 'form-control' %>
+            <%= f.label :date, '開催日' %>
+            <%= f.date_select :date, class: 'form-control' %>
         </div>
 
         <div class="form-group">
-            <%= f.label :event_start_time, '開始時刻' %>
-            <%= f.time_select :event_start_time, class: 'form-control' %>
+            <%= f.label :start_time, '開始時刻' %>
+            <%= f.time_select :start_time, class: 'form-control' %>
         </div>
 
         <div class="form-group">
-            <%= f.label :event_end_time, '終了時刻' %>
-            <%= f.time_select :event_end_time, class: 'form-control' %>
+            <%= f.label :end_time, '終了時刻' %>
+            <%= f.time_select :end_time, class: 'form-control' %>
         </div>
 
         <div class="form-group">
