レイアウト修正

--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -32,7 +32,7 @@
     margin-top: 50px;
 }
 
-.event_detail-top{
+.event_detail-top-img{
     margin: 0 auto;
     width: 70%;
 
@@ -53,3 +53,13 @@
     }
 
 }
+
+
+// @media screen and (max-width:768px) {
+
+//     .event_detail-top-info{
+//         text-align: center;
+//     }
+
+ 
+// }
