--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -32,7 +32,7 @@
     margin-top: 50px;
 }
 
-.event_detail-top-img{
+.event_detail{
     margin: 0 auto;
     width: 70%;
 
@@ -42,14 +42,44 @@
         margin-bottom: 20px;
     }
 
-    .event-title{
-        font-size: 20px;
-        margin-bottom: 0.5rem;
+    &-top{
+        padding: 0 10px;
+
+        &-cont{
+            .event-title{
+                font-size: 20px;
+                margin-bottom: 0.5rem;
+            }
+            p{
+                font-weight: bold;
+                font-size: 16px;
+            }
+        }
+
+        &-rsv input{
+            padding: 12px 20px;
+        }
+
     }
 
-    p{
-        font-weight: bold;
-        font-size: 16px;
+    &-main{
+        margin-top: 50px;
+        border: #ccc 1px solid;
+        border-radius: 0.5rem;
+
+        &-title{
+            background-color: #ccc;
+            padding: 1rem;
+            font-weight: bold;
+        }
+
+        &-text{
+            padding: 1rem 1.5rem;
+        }
+    }
+
+    &-foot{
+        margin-top: 50px;
     }
 
 }
