--- a/app/assets/stylesheets/reservations.scss
+++ b/app/assets/stylesheets/reservations.scss
@@ -23,3 +23,13 @@
     margin-top: 10px;
     padding: 10px 20px;
 }
+
+.reserved-user_title{
+    font-size: 24px;
+    font-weight: bold;
+    margin-top: 5rem;
+}
+
+.reserved-user_body{
+    margin-bottom: 5rem;
+}
