--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="my_edit-box">
-    <h2>パスワード・メールアドレス編集 <%= resource_name.to_s.humanize %></h2>
+    <h2>パスワード・メールアドレス編集</h2>
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
@@ -38,6 +38,6 @@
       </div>
     <% end %>
 
-    <%= link_to "Back", :back %>
+    <%= link_to "マイページへ戻る", :back, class: "btn btn-primary" %>
   </div>
 </div>
