--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,7 +5,7 @@
       <%= link_to '新規作成', new_user_registration_path, class: 'btn btn-outline-dark' %>
     </div>
   </div>
-  <table class="table table-hover users__table">
+  <table class="table  users__table">
     <thead class="thead-dark">
       <tr>
         <th>ID</th>
@@ -27,7 +27,7 @@
               <%= part.name %>
             <% end %>
           </td>
-          <td><%= user.created_at.to_s(:datetime_jp) %></td>
+          <td><%= user.created_at.to_s(:date_time_stamp) %></td>
           <td><%= link_to '削除', user, class: 'btn btn-outline-dark', method: :delete %></td>
         </tr>
       <% end %>
